--- a/boselecta/index.html
+++ b/boselecta/index.html
@@ -49,28 +49,27 @@ FOOTER
             <h2>Casestudies</h2>
             <p>Casestudies of processes, challenges &amp; solutions from my daily work.</p>
         </div>
-        <span class="img" class="content"></span>
+        <a href="#" class="img-wrap">
+            <span class="img" style="background-image: url(/assets/img/entry-home+.png);"></span>
+        </a>
         <div class="content">
             <h3><a href="pages/casestudy/research-improvement/" title="">Improving the Claims Experience: <br class="dt-set" />Research-Backed UX and Team Growth</a></h3>
         </div>
     </section>
 
     <section id="casestudy" class="fade casestudy">
-        <span class="img" class="initial"></span>
+        <a href="#" class="img-wrap">
+            <span class="img" style="background-image: url(/assets/img/entry-soluto.png);"></span>
+        </a>
         <div class="content">
             <h3><a href="pages/casestudy/initial-experience/" title="">Refining the intial experience<br class="dt-set" /> of the au Tsukasapo app</a></h3>
         </div>
     </section>
 
-    <section id="casestudy" class="fade casestudy">
-        <span class="img" aria-colcount="homeplus"></span>
-        <div class="content">
-            <h3><a href="pages/casestudy/iteration-testing/" title="">Design iteration and user testing<br class="dt-set" /> of Asurion Home+ MyPortal</a></h3>
-        </div>
-    </section>
-
     <section id="casestudy" class="fade casestudy flip">
-        <span class="img" class="flip"></span>
+        <a href="#" class="img-wrap">
+            <span class="img" style="background-image: url(/assets/img/entry-flip.png);"></span>
+        </a>
         <div class="content">
             <h3><a href="casestudy/system-ui/" title="">Flip Japan</a></h3>
         </div>
@@ -90,19 +89,25 @@ FOOTER
         </div>
         <div class="flex">
             <div class="col">
-                <span class="img" style="background-image: url(/assets/img/entry-variables.png);"></span>
+                <a href="#" class="img-wrap">
+                    <span class="img" style="background-image: url(/assets/img/entry-variables.png);"></span>
+                </a>
                 <div class="content">
                     <h4><a href="/portfolio/boselecta/pages/journal/figma-variables/" title="">Refining Figma design tokens &amp; variables for developer handoff</a></h4>
                 </div>
             </div>
             <div class="col">
-                <span class="img" style="background-image: url(/assets/img/entry-inspection.png);"></span>
+                <a href="#" class="img-wrap">
+                    <span class="img" style="background-image: url(/assets/img/entry-inspection.png);"></span>
+                </a>
                 <div class="content">
                     <h4><a href="/portfolio/boselecta/pages/journal/design-inspection/" title="">Syncing a Design inspection alongside UAT</a></h4>
                 </div>
             </div>
             <div class="col">
-                <span class="img" style="background-image: url(/assets/img/entry-userflow.png);"></span>
+                <a href="#" class="img-wrap">
+                    <span class="img" style="background-image: url(/assets/img/entry-userflow.png);"></span>
+                </a>
                 <div class="content">
                     <h4><a href="/portfolio/boselecta/pages/journal/user-flow/" title="">Automated Userflow and Screen repository for sprint project</a></h4>
                 </div>
