--- a/boselecta/index.html
+++ b/boselecta/index.html
@@ -50,7 +50,7 @@ FOOTER
             <p>Casestudies of processes, challenges &amp; solutions from my daily work.</p>
         </div>
         <a href="#" class="img-wrap">
-            <span class="img" style="background-image: url(/assets/img/entry-home+.png);"></span>
+            <span class="img" style="background-image: url(assets/img/entry-home+.png);"></span>
         </a>
         <div class="content">
             <h3><a href="pages/casestudy/research-improvement/" title="">Improving the Claims Experience: <br class="dt-set" />Research-Backed UX and Team Growth</a></h3>
@@ -59,7 +59,7 @@ FOOTER
 
     <section id="casestudy" class="fade casestudy">
         <a href="#" class="img-wrap">
-            <span class="img" style="background-image: url(/assets/img/entry-soluto.png);"></span>
+            <span class="img" style="background-image: url(assets/img/entry-soluto.png);"></span>
         </a>
         <div class="content">
             <h3><a href="pages/casestudy/initial-experience/" title="">Refining the intial experience<br class="dt-set" /> of the au Tsukasapo app</a></h3>
@@ -68,7 +68,7 @@ FOOTER
 
     <section id="casestudy" class="fade casestudy flip">
         <a href="#" class="img-wrap">
-            <span class="img" style="background-image: url(/assets/img/entry-flip.png);"></span>
+            <span class="img" style="background-image: url(assets/img/entry-flip.png);"></span>
         </a>
         <div class="content">
             <h3><a href="casestudy/system-ui/" title="">Flip Japan</a></h3>
@@ -90,7 +90,7 @@ FOOTER
         <div class="flex">
             <div class="col">
                 <a href="#" class="img-wrap">
-                    <span class="img" style="background-image: url(/assets/img/entry-variables.png);"></span>
+                    <span class="img" style="background-image: url(assets/img/entry-variables.png);"></span>
                 </a>
                 <div class="content">
                     <h4><a href="/portfolio/boselecta/pages/journal/figma-variables/" title="">Refining Figma design tokens &amp; variables for developer handoff</a></h4>
@@ -98,7 +98,7 @@ FOOTER
             </div>
             <div class="col">
                 <a href="#" class="img-wrap">
-                    <span class="img" style="background-image: url(/assets/img/entry-inspection.png);"></span>
+                    <span class="img" style="background-image: url(assets/img/entry-inspection.png);"></span>
                 </a>
                 <div class="content">
                     <h4><a href="/portfolio/boselecta/pages/journal/design-inspection/" title="">Syncing a Design inspection alongside UAT</a></h4>
@@ -106,7 +106,7 @@ FOOTER
             </div>
             <div class="col">
                 <a href="#" class="img-wrap">
-                    <span class="img" style="background-image: url(/assets/img/entry-userflow.png);"></span>
+                    <span class="img" style="background-image: url(assets/img/entry-userflow.png);"></span>
                 </a>
                 <div class="content">
                     <h4><a href="/portfolio/boselecta/pages/journal/user-flow/" title="">Automated Userflow and Screen repository for sprint project</a></h4>
