--- a/boselecta/index.html
+++ b/boselecta/index.html
@@ -10,7 +10,7 @@
 <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet'-->
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
 
-<meta name="theme-color" content="#346672">
+<meta name="theme-color" content="#315D68">
 <link rel="apple-touch-icon" href="https://assets/imgs/icon-apple.jpg">
 <meta property="og:image" content="https://assets/imgs/icon-og.jpg">
 <link rel="stylesheet" href="assets/css/core.css">
@@ -118,7 +118,7 @@ FOOTER
     <section id="showcase" class="fade casestudy">
         <div class="heading">
             <h2>Showcase</h2>
-            <p>A showcase of smaller initiatives I have undertaken in my free time.</p>
+            <p>A window into smaller initiatives I have undertaken in my free time.</p>
         </div>
         <div id="casestudy-pulse" class="col">
             <div class="img-wrap">
