--- a/boselecta/pages/about/index.html
+++ b/boselecta/pages/about/index.html
@@ -12,7 +12,7 @@
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 
-<meta name="theme-color" content="#346672">
+<meta name="theme-color" content="#F1F1F3">
 <link rel="apple-touch-icon" href="https://assets/imgs/icon-apple.jpg">
 <meta property="og:image" content="https://assets/imgs/icon-og.jpg">
 <link rel="stylesheet" href="../../assets/css/core.css">
