--- a/boselecta/pages/casestudy/research-improvement/index.html
+++ b/boselecta/pages/casestudy/research-improvement/index.html
@@ -13,7 +13,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 <script src="https://unpkg.com/lucide@latest"></script>
 
-<meta name="theme-color" content="#346672">
+<meta name="theme-color" content="#29444C">
 <link rel="apple-touch-icon" href="https://assets/imgs/icon-apple.jpg">
 <meta property="og:image" content="https://assets/imgs/icon-og.jpg">
 <link rel="stylesheet" href="../../../assets/css/core.css">
