--- a/boselecta/pages/casestudy/initial-experience/index.html
+++ b/boselecta/pages/casestudy/initial-experience/index.html
@@ -10,7 +10,7 @@
 <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet'-->
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
 
-<meta name="theme-color" content="#346672">
+<meta name="theme-color" content="#29444C">
 <link rel="apple-touch-icon" href="https://assets/imgs/icon-apple.jpg">
 <meta property="og:image" content="https://assets/imgs/icon-og.jpg">
 <link rel="stylesheet" href="../../../assets/css/core.css">
