--- a/boselecta/pages/about/index.html
+++ b/boselecta/pages/about/index.html
@@ -31,15 +31,14 @@ FOOTER
 <body class="page-about">
     <header>
         <div class="brand">
-            <h1>Peter Roper</h1>
-            <small>Product Designer</small>
+            <h1>Peter Roper <span class="img" style="background-image: url(/assets/img/fox.png);"></span></h1>
         </div>
         <a href="/" class="close"><span class="material-icons">close</span></a>
     </header>
     <section id="intro" class="content">
         <h4>About me</h4>
         <h2>Leading design<br /> with clarity and execution,<br /> bringing structure to complexity.</h2>
-        <p>I'm a design generalist who has evolved over a +20-year career by continuously expanding my skill set. </p>
+        <p>I’m a design generalist who has evolved over a 20+ year career, continuously expanding my skill set. My love for design comes from the journey of building tangible solutions &amp; refining elements into something meaningful and impactful.</p>
     </section>
     <section id="about" class="flex container">
         <div class="col1">
@@ -48,31 +47,57 @@ FOOTER
             <blockquote>
                 <p>"I value the full end-to-end product lifecycle, contributing not just to initial delivery but to long-term, continuous improvement. That takes more than skill—it takes stamina, adaptability, and ongoing commitment."</p>
             </blockquote>
-            <p>In my current role I have worked on a broad range of projects. In the last year I have worked on the launch of a new Asurion Home Protection service which involved responsive UI design, marketing and system-as-a-service thinking. I’ve also been a lead designer on a long-term initiative designing a popular consumer app for au, delivered in agile sprints. In parallel, I’ve supported various internal tools, including chat platforms and admin systems. These experiences have deepened my versatility as a designer, allowing me to adapt seamlessly across product types, teams, and design challenges.</p>
+            <p>In my current role I have experienced a broad range of projects. In the last year I have worked on the launch of a new Asurion Home Protection service which involved, localisation, responsive UI design, marketing and system-as-a-service thinking. I’ve also been a lead designer on a long-term initiative designing a popular consumer app for au, delivered in agile sprints. In parallel, I’ve supported various internal tools, including chat platforms and admin systems. These experiences have deepened my versatility as a designer, allowing me to adapt seamlessly across product types, teams, and design challenges.</p>
             <p>At the core of my work is a deep focus on people—both the users I design for and the colleagues I collaborate with. I pay close attention to patterns and take an empathetic, considered approach to understanding feelings, uncovering needs, and creating solutions that make a meaningful difference.</p>
 
             <!--span class="img"></span-->
         </div>
         <div class="col2">
             <span class="img"></span>
-            <h4>Design Skills</h4>
-            <ul>
-                <li>UI Design</li>
-                <li>UX Research Process</li>
-                <li>Design Systems & Scability</li>
-                <li>Agile Product Design</li>
-                <li>Design Process</li>
-                <li>FE Development (+10yrs experience)</li>
-            </ul>
-            <h4>Personal Skills</h4>
-            <ul>
-                <li>Pattern Recognition</li>
-                <li>Thoughtful Iteration</li>
-                <li>Collaboration &amp; Calm Influence</li>
-                <li>Grounded Leadership</li>
-                <li>Delivery & Execution</li>
-                <li>Systemic Thinking</li>
-            </ul>
+            <h4>Alittle about me...</h4>
+            <blockquote class="basic">
+                <p>I take a calm, observant approach to life and design. I’ve lived in Japan for over 20 years, and find a lot of joy in walking, gardening, and shaping my surroundings with care. For me, good design feels like a well-tended space—it grows, adapts, and reveals meaning over time.</p>
+            </blockquote>
+        </div>
+    </section>
+    <section id="skills" class="container">
+        <!--div class="heading">
+            <span class="img" style="background-image: url(/assets/img/about-skills.png);"></span>
+        </div-->
+        <div class="flex">
+            <div class="col">
+                <h4>Core Design Skills</h4>
+                <ul>
+                    <li>UI Design</li>
+                    <li>Agile Product Design</li>
+                    <li>UX Research Process</li>
+                    <li>Design Systems & Guidelines</li>
+                    <li>Product Management</li>
+                    <li>FE Development - CSS/JS/HTML</li>
+                </ul>
+            </div>
+            <div class="col">
+                <h4>Generalist Skills</h4>
+                <ul>
+                    <li>Animation & Interaction Design</li>
+                    <li>Design Process</li>
+                    <li>Accessibility Understanding</li>
+                    <li>Responsive Design</li>
+                    <li>Systematic Thinking &amp; Scalability</li>
+                    <li>SEO and Site Optimisation</li>
+                </ul>
+            </div>
+            <div class="col">
+                <h4>Personal Skills</h4>
+                <ul>
+                    <li>Stakeholder Communication</li>
+                    <li>Delivery & Execution</li>
+                    <li>Task Management</li>
+                    <li>Collaboration &amp; Leadership</li>
+                    <li>Pattern Recognition</li>
+                    <li>Proactive Problem Solving</li>
+                </ul>
+            </div>
         </div>
     </section>
     <footer>
