--- a/boselecta/pages/casestudy/content-design/index.html
+++ b/boselecta/pages/casestudy/content-design/index.html
@@ -9,6 +9,9 @@
 <link href='https://fonts.googleapis.com/css?family=Lora' rel='stylesheet'>
 <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet'-->
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+<script src="https://unpkg.com/lucide@latest"></script>
 
 <meta name="theme-color" content="#29444C">
 <link rel="apple-touch-icon" href="https://assets/imgs/icon-apple.jpg">
@@ -16,42 +19,148 @@
 <link rel="stylesheet" href="../../../assets/css/core.css">
 <link rel="stylesheet" href="../../../assets/css/styles.css">
 <script src="../../../assets/js/core.js"></script>
-<!--
-HEADER
-1. HERO
-2. SERVICES
-3. BENEFITS
-4. DETAILS
-5. TESTIMONIALS
-FOOTER
--->
+
 </head>
-<body>
+<body class="page-journal">
     <!-- HEADER  -->
     <header>
         <div class="brand">
-            <h1>Peter Roper</h1>
-            <small>Product Designer</small>
+            <h1>Peter Roper <span class="img" style="background-image: url(/assets/img/fox.png);"></span></h1>
         </div>
+        <a href="/" class="close"><span class="material-icons">close</span></a>
     </header>
-    <section id="intro" class="content fade">
+    <section id="intro" class="content">
         <h2>
-            Conceptualising the design <br class="dt-set" /> of an au content app
+            Content Design : <br class="dt-set" />Turning Proactive Iteration into Strategic Alignment
         </h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus euismod nulla sed risus congue, vel facilisis libero malesuada. Curabitur tincidunt mi a est ullamcorper.</p>
+        <p>A post-release design initiative that began as self-driven improvement, and evolved into a key reference for a future project.</p>
         <a class="button" style="display: none;"></a>
     </section>
-    <section class="splash">
-        <div class="container">
+    <section id="splash">
+        <span class="img" style="background-image: url(/assets/img/case-top-content.png);"></span>
+    </section>
+    <section id="entry">
+        <div class="container section1 flex">
+            <div class="col1 col">
+                <h4>Outcome</h4>
+                <p>By proactively anticipating future needs, I was able to align my independently developed concept designs with the goals of the Product Management team—at a time when they were short on capacity during the discovery phase. Although this approach wasn’t part of a formal process, my initiative and attention to detail allowed us to bring a wide range of ideas to the table that otherwise might have been missed. Usability testing helped refine these concepts, and while some features were filtered out, the breadth of exploration led to strong insights and validated several valuable directions.</p>
+            </div>
+            <div class="col2 col">
+                <span class="img" style="background-image: url(/assets/img/case-1-content.jpg);"></span>
+            </div>
+        </div>
+        <div class="headline heading container">
+            <div class="flex">
+                <div class="col">
+                    <span class="material-icons">close</span>
+                    <h3>Drop In<br /> Engagement</h3>
+                    <p>Initial Data showed that mobile first designs saw a 10% increase in user retention past the first month.</p>
+                </div>
+                <div class="col">
+                    <span class="material-icons">close</span>
+                    <h3>Navigation<br />Effectiveness</h3>
+                    <p>The volumne of calls relating to claim processing reduced by 20% within 3 months on implementation.</p>
+                </div>
+                <div class="col">
+                    <span class="material-icons">close</span>
+                    <i data-lucide="bullseye" style="vertical-align: middle; margin-right: 8px;"></i>
+                    <h3>Structured<br /> Learning</h3>
+                    <p>A follow up usability score saw an approval rating of 7/9 reviewers.</p>
+                </div>  
+            </div>
+        </div>
+        <div class="heading container">
+            <span class="img" style="background-image: url(/assets/img/case-claim-outcome.png);"></span>
+        </div>
+
+        <div class="container section1 flex">
+            <div class="col1 col">
+                <h4>Context</h4>
+                <p>As the lead designer on the au TsukasaPo app, I’ve seen its core purpose evolve—from primarily offering diagnostic tools to becoming a content-driven experience tailored to its daily active users.</p>
+                <p>A recent joint initiative between KDDI and Asurion sparked a renewal of the app’s core concept. The goal: to deliver more engaging daily digital content through a refreshed, contemporary UI—broadening its appeal to younger users while continuing to support its core audience of older, mid-to-low literacy users..</p>
+            </div>
+            <div class="col2 col">
+                <h4>Background</h4>
+                <p>A year earlier, I had led the design of a content feature that fell short due to MVP constraints and ongoing requirement creep. Motivated by both proactivity and some frustration, I continued working post-release—developing improved concepts and exploring ways to drive more UX-led changes in future phases. Although those follow-up phases never materialized, the desktop research and design work I had done gained traction with the product management team. Over time, these early concepts became influential and were ultimately adopted during the discovery phase.</p>
+            </div>
+        </div> 
+        <div class="container section1 flex">
+            <div class="col1 col">
+                <h4>Action</h4>
+                <p>Blah blah, desktop research. love of Jakobs law. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisi. Donec vel sapien at nunc suscipit tincidunt. Fusce auctor, ligula id tincidunt sollicitudin, justo velit convallis nisi, a fermentum nunc sapien at risus. Curabitur id ligula vel orci auctor malesuada. Integer a eros sed ipsum cursus convallis. Mauris nec velit et justo facilisis placerat. Suspendisse potenti. Ut in tincidunt augue, a posuere nisl.</p>
+            </div>
+            <div class="col2 col">
+                <span class="img" style="background-image: url(/assets/img/case-2-content.jpg);"></span>
+            </div>
+        </div> 
+        <div class="container section1 flex">
+            <div class="col1 col">
+                <span class="img" style="background-image: url(/assets/img/case-claim-flow.png);"></span>
+            </div>
+            <div class="col2 col">
+                <h4>Structure</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisi. Donec vel sapien at nunc suscipit tincidunt. Fusce auctor, ligula id tincidunt sollicitudin, justo velit convallis nisi, a fermentum nunc sapien at risus. Curabitur id ligula vel orci auctor malesuada. Integer a eros sed ipsum cursus convallis. Mauris nec velit et justo facilisis placerat. Suspendisse potenti. Ut in tincidunt augue, a posuere nisl.</p>
+            </div>
+        </div>  
+        <div class="headline heading narrow container">
+            <div class="flex">
+                <div class="col">
+                    <h3>Title</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisi.</p>
+                </div>
+                <div class="col">
+                    <h3>Title</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisi.</p>
+                </div>
+                <div class="col">
+                    <h3>Title</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisi.</p>
+                </div>
+            </div>
+        </div> 
+        <div class="container section1 flex">
+            <div class="col1 col">
+                <h4>Wireframing</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisi. Donec vel sapien at nunc suscipit tincidunt. Fusce auctor, ligula id tincidunt sollicitudin, justo velit convallis nisi, a fermentum nunc sapien at risus. Curabitur id ligula vel orci auctor malesuada. Integer a eros sed ipsum cursus convallis. Mauris nec velit et justo facilisis placerat. Suspendisse potenti. Ut in tincidunt augue, a posuere nisl.</p>
+            </div>
+            <div class="col2 col">
+                <span class="img"></span>
+            </div>
+        </div> 
+        <div class="heading container">
             <span class="img"></span>
+        </div>
+        <div class="container section1 flex">
+            <div class="col1 col">
+                <h4>Surface</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisi. Donec vel sapien at nunc suscipit tincidunt. Fusce auctor, ligula id tincidunt sollicitudin, justo velit convallis nisi, a fermentum nunc sapien at risus. Curabitur id ligula vel orci auctor malesuada. Integer a eros sed ipsum cursus convallis. Mauris nec velit et justo facilisis placerat. Suspendisse potenti. Ut in tincidunt augue, a posuere nisl.</p>
+            </div>
+            <div class="col1 col">
+                <h4>Title</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisi. Donec vel sapien at nunc suscipit tincidunt. Fusce auctor, ligula id tincidunt sollicitudin, justo velit convallis nisi, a fermentum nunc sapien at risus. Curabitur id ligula vel orci auctor malesuada. Integer a eros sed ipsum cursus convallis. Mauris nec velit et justo facilisis placerat. Suspendisse potenti. Ut in tincidunt augue, a posuere nisl.</p>
+            </div>
+        </div> 
+        <div class="note">
+            <small>
+                This case study is a snapshot — I’ve kept it focused to balance work, life, and clarity. <br class="dt-set" />
+                Feel free to reach out if you'd like to learn more about the process or chat about design.
+            </small>
+            <nav class="btns sm">
+                <a href="mailto:peter.roper.jp@gmail.com" class="button md outline" title="">Email me</a>
+                <a href="https://www.linkedin.com/in/peter-roper/?originalSubdomain=jp" class="button outline" target="_blank">
+                    <i class="fa-brands fa-linkedin" style="font-size: 24px; color: #0A66C2;"></i>
+                </a>
+            </nav>
         </div>
     </section>
     <footer>
         <div class="container">
             <h5>Next Casestudy</h4>
-            <h2><a href="#">Refining system UI and<br class="dt-set" /> eliminating user pain points</a>
+            <h2><a href="/pages/journal/user-flow/" title="">Automated Userflow and Screen repository for sprint project</a></h2>
         </div>
-        
     </footer>
+    <script>
+        lucide.createIcons();
+      </script>
 </body>
 </html>
