--- a/boselecta/pages/casestudy/initial-experience/index.html
+++ b/boselecta/pages/casestudy/initial-experience/index.html
@@ -1,4 +1,4 @@
-<html class="page-casestudy"> 
+<html> 
 <head>
 <title>Peter Roper Design</title>
 <meta name="viewport" content="width=device-width,	 initial-scale=1.0">
@@ -9,6 +9,9 @@
 <link href='https://fonts.googleapis.com/css?family=Lora' rel='stylesheet'>
 <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet'-->
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+<script src="https://unpkg.com/lucide@latest"></script>
 
 <meta name="theme-color" content="#29444C">
 <link rel="apple-touch-icon" href="https://assets/imgs/icon-apple.jpg">
@@ -16,42 +19,147 @@
 <link rel="stylesheet" href="../../../assets/css/core.css">
 <link rel="stylesheet" href="../../../assets/css/styles.css">
 <script src="../../../assets/js/core.js"></script>
-<!--
-HEADER
-1. HERO
-2. SERVICES
-3. BENEFITS
-4. DETAILS
-5. TESTIMONIALS
-FOOTER
--->
+
 </head>
-<body id="initial-experience">
+<body class="page-journal">
     <!-- HEADER  -->
     <header>
         <div class="brand">
-            <h1>Peter Roper</h1>
-            <small>Product Designer</small>
+            <h1>Peter Roper <span class="img" style="background-image: url(/assets/img/fox.png);"></span></h1>
         </div>
+        <a href="/" class="close"><span class="material-icons">close</span></a>
     </header>
-    <section id="intro" class="content casestudy">
+    <section id="intro" class="content">
         <h2>
-            Refining the intial experience<br class="dt-set" /> of the au Tsukasapo app
+            Refining the Intial Experience<br class="dt-set" /> of the au Tsukasapo app
         </h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus euismod nulla sed risus congue, vel facilisis libero malesuada. Curabitur tincidunt mi a est ullamcorper.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
         <a class="button" style="display: none;"></a>
     </section>
-    <section class="splash">
-        <div class="container">
+    <section id="splash">
+        <span class="img" style="background-image: url(/assets/img/case-top-initial.png);"></span>
+    </section>
+    <section id="entry">
+        <div class="container section1 flex">
+            <div class="col1 col">
+                <h4>Outcome</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisi. Donec vel sapien at nunc suscipit tincidunt. Fusce auctor, ligula id tincidunt sollicitudin, justo velit convallis nisi, a fermentum nunc sapien at risus. Curabitur id ligula vel orci auctor malesuada. Integer a eros sed ipsum cursus convallis. Mauris nec velit et justo facilisis placerat. Suspendisse potenti. Ut in tincidunt augue, a posuere nisl.</p>
+            </div>
+            <div class="col2 col">
+                <span class="img" style="background-image: url(/assets/img/case-1-initial.jpg);"></span>
+            </div>
+        </div>
+        <div class="headline heading container">
+            <div class="flex">
+                <div class="col">
+                    <span class="material-icons">close</span>
+                    <h3>Title</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                </div>
+                <div class="col">
+                    <span class="material-icons">close</span>
+                    <h3>Title</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                </div>
+                <div class="col">
+                    <span class="material-icons">close</span>
+                    <i data-lucide="bullseye" style="vertical-align: middle; margin-right: 8px;"></i>
+                    <h3>Title</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                </div>  
+            </div>
+        </div>
+        <div class="heading container">
+            <span class="img" style="background-image: url(/assets/img/case-initial-outcome.png);"></span>
+        </div>
+
+        <div class="container section1 flex">
+            <div class="col1 col">
+                <h4>Context</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisi. Donec vel sapien at nunc suscipit tincidunt. Fusce auctor, ligula id tincidunt sollicitudin, justo velit convallis nisi, a fermentum nunc sapien at risus. Curabitur id ligula vel orci auctor malesuada. Integer a eros sed ipsum cursus convallis. Mauris nec velit et justo facilisis placerat. Suspendisse potenti. Ut in tincidunt augue, a posuere nisl.</p>
+            </div>
+            <div class="col2 col">
+                <h4>Background</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisi. Donec vel sapien at nunc suscipit tincidunt. Fusce auctor, ligula id tincidunt sollicitudin, justo velit convallis nisi, a fermentum nunc sapien at risus. Curabitur id ligula vel orci auctor malesuada. Integer a eros sed ipsum cursus convallis. Mauris nec velit et justo facilisis placerat. Suspendisse potenti. Ut in tincidunt augue, a posuere nisl.</p>
+            </div>
+        </div> 
+        <div class="container section1 flex">
+            <div class="col1 col">
+                <h4>Action</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisi. Donec vel sapien at nunc suscipit tincidunt. Fusce auctor, ligula id tincidunt sollicitudin, justo velit convallis nisi, a fermentum nunc sapien at risus. Curabitur id ligula vel orci auctor malesuada. Integer a eros sed ipsum cursus convallis. Mauris nec velit et justo facilisis placerat. Suspendisse potenti. Ut in tincidunt augue, a posuere nisl.</p>
+            </div>
+            <div class="col2 col">
+                <span class="img" style="background-image: url(/assets/img/case-2-initial.jpg);"></span>
+            </div>
+        </div> 
+        <div class="container section1 flex">
+            <div class="col1 col">
+                <span class="img" style="background-image: url(/assets/img/case-initial-flow.png);"></span>
+            </div>
+            <div class="col2 col">
+                <h4>Structure</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisi. Donec vel sapien at nunc suscipit tincidunt. Fusce auctor, ligula id tincidunt sollicitudin, justo velit convallis nisi, a fermentum nunc sapien at risus. Curabitur id ligula vel orci auctor malesuada. Integer a eros sed ipsum cursus convallis. Mauris nec velit et justo facilisis placerat. Suspendisse potenti. Ut in tincidunt augue, a posuere nisl.</p>
+            </div>
+        </div>  
+        <div class="headline heading narrow container">
+            <div class="flex">
+                <div class="col">
+                    <h3>Title</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisi.</p>
+                </div>
+                <div class="col">
+                    <h3>Title</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisi.</p>
+                </div>
+                <div class="col">
+                    <h3>Title</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisi.</p>
+                </div>
+            </div>
+        </div> 
+        <div class="container section1 flex">
+            <div class="col1 col">
+                <h4>Wireframing</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisi. Donec vel sapien at nunc suscipit tincidunt. Fusce auctor, ligula id tincidunt sollicitudin, justo velit convallis nisi, a fermentum nunc sapien at risus. Curabitur id ligula vel orci auctor malesuada. Integer a eros sed ipsum cursus convallis. Mauris nec velit et justo facilisis placerat. Suspendisse potenti. Ut in tincidunt augue, a posuere nisl.</p>
+            </div>
+            <div class="col2 col">
+                <span class="img"></span>
+            </div>
+        </div> 
+        <div class="heading container">
             <span class="img"></span>
+        </div>
+        <div class="container section1 flex">
+            <div class="col1 col">
+                <h4>Surface</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisi. Donec vel sapien at nunc suscipit tincidunt. Fusce auctor, ligula id tincidunt sollicitudin, justo velit convallis nisi, a fermentum nunc sapien at risus. Curabitur id ligula vel orci auctor malesuada. Integer a eros sed ipsum cursus convallis. Mauris nec velit et justo facilisis placerat. Suspendisse potenti. Ut in tincidunt augue, a posuere nisl.</p>
+            </div>
+            <div class="col1 col">
+                <h4>Title</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisi. Donec vel sapien at nunc suscipit tincidunt. Fusce auctor, ligula id tincidunt sollicitudin, justo velit convallis nisi, a fermentum nunc sapien at risus. Curabitur id ligula vel orci auctor malesuada. Integer a eros sed ipsum cursus convallis. Mauris nec velit et justo facilisis placerat. Suspendisse potenti. Ut in tincidunt augue, a posuere nisl.</p>
+            </div>
+        </div> 
+        <div class="note">
+            <small>
+                This case study is a snapshot — I’ve kept it focused to balance work, life, and clarity. <br class="dt-set" />
+                Feel free to reach out if you'd like to learn more about the process or chat about design.
+            </small>
+            <nav class="btns sm">
+                <a href="mailto:peter.roper.jp@gmail.com" class="button md outline" title="">Email me</a>
+                <a href="https://www.linkedin.com/in/peter-roper/?originalSubdomain=jp" class="button outline" target="_blank">
+                    <i class="fa-brands fa-linkedin" style="font-size: 24px; color: #0A66C2;"></i>
+                </a>
+            </nav>
         </div>
     </section>
     <footer>
         <div class="container">
             <h5>Next Casestudy</h4>
-            <h2><a href="#">Refining system UI and<br class="dt-set" /> eliminating user pain points</a>
+            <h2><a href="/pages/journal/user-flow/" title="">Automated Userflow and Screen repository for sprint project</a></h2>
         </div>
-        
     </footer>
+    <script>
+        lucide.createIcons();
+      </script>
 </body>
 </html>
