--- a/boselecta/index.html
+++ b/boselecta/index.html
@@ -10,7 +10,7 @@
 <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet'-->
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
 
-<meta name="theme-color" content="#315D68">
+<meta name="theme-color" content="315D68">
 <link rel="apple-touch-icon" href="https://assets/imgs/icon-apple.jpg">
 <meta property="og:image" content="https://assets/imgs/icon-og.jpg">
 <link rel="stylesheet" href="assets/css/core.css">
@@ -28,8 +28,7 @@ FOOTER
 <body class="page-index">
     <header>
         <div class="brand">
-            <h1><span>🦊</span> Peter Roper</h1>
-            <small>Product Designer</small>
+            <h1>Peter Roper <span class="img" style="background-image: url(/assets/img/fox.png);"></span></h1>
         </div>
     </header>
     <!-- INTRO  -->
@@ -40,8 +39,8 @@ FOOTER
             Based in Tokyo<br class="dt-set" />
             With 20+ years hands on 👋 XP
         </h2>
-        <p>I specialize in bridging design and execution—bringing structure to complexity, refining processes, and ensuring great ideas translate into real, impactful outcomes.</p>
-        <a href="/portfolio/boselecta/pages/about/" class="button outline" title="">More about me</a>
+        <p>I specialize in bridging design and execution—bringing clarity to complexity through a thoughtful, introspective approach rooted in empathy, ensuring great ideas translate into real, impactful outcomes.</p>
+        <a href="pages/about/" class="button outline" title="About Me">More about me</a>
     </section>
 
     <section id="casestudy" class="fade casestudy">
@@ -49,38 +48,31 @@ FOOTER
             <h2>Casestudies</h2>
             <p>Casestudies of processes, challenges &amp; solutions from my daily work.</p>
         </div>
-        <a href="#" class="img-wrap">
-            <span class="img" style="background-image: url(assets/img/entry-home+.png);"></span>
+        <a href="pages/casestudy/research-improvement/" class="img-wrap" title="Improving the Claims Experience">
+            <span class="img" style="background-image: url(assets/img/case-prev-home.png);"></span>
         </a>
         <div class="content">
-            <h3><a href="pages/casestudy/research-improvement/" title="">Improving the Claims Experience: <br class="dt-set" />Research-Backed UX and Team Growth</a></h3>
+            <h3><a href="pages/casestudy/research-improvement/" title="Improving Claims Experience">Improving the Claims Experience: <br class="dt-set" />Research-Backed UX and Team Growth</a></h3>
         </div>
     </section>
 
     <section id="casestudy" class="fade casestudy">
-        <a href="#" class="img-wrap">
-            <span class="img" style="background-image: url(assets/img/entry-soluto.png);"></span>
+        <a href="pages/casestudy/content-design/" class="img-wrap">
+            <span class="img" style="background-image: url(assets/img/case-prev-content.png);"></span>
         </a>
         <div class="content">
-            <h3><a href="pages/casestudy/initial-experience/" title="">Refining the intial experience<br class="dt-set" /> of the au Tsukasapo app</a></h3>
+            <h3><a href="pages/casestudy/content-design/" title="Content Design Iteration">Content Design : <br class="dt-set" />Turning Proactive Iteration into Strategic Alignment</a></h3>
         </div>
     </section>
 
-    <section id="casestudy" class="fade casestudy flip">
-        <a href="#" class="img-wrap">
-            <span class="img" style="background-image: url(assets/img/entry-flip.png);"></span>
+    <section id="casestudy" class="fade casestudy">
+        <a href="pages/journal/initial-experience/" class="img-wrap">
+            <span class="img" style="background-image: url(assets/img/case-prev-soluto.png);"></span>
         </a>
         <div class="content">
-            <h3><a href="casestudy/system-ui/" title="">Flip Japan</a></h3>
+            <h3><a href="pages/casestudy/initial-experience/" title="Refining the Intial Experience">Refining the intial experience<br class="dt-set" /> of the au Tsukasapo app</a></h3>
         </div>
     </section>
-
-    <!--section id="" class="casestudy pulse">
-        <span class="img"></span>
-        <div class="content">
-            <h3><a href="/casestudy/system-ui/" title="">Pulse Football</a></h3>
-        </div>
-    </section-->
 
     <section id="journal" class="fade casestudy">
         <div class="heading">
@@ -89,27 +81,27 @@ FOOTER
         </div>
         <div class="flex">
             <div class="col">
-                <a href="#" class="img-wrap">
+                <a href="pages/journal/figma-variables/" class="img-wrap">
                     <span class="img" style="background-image: url(assets/img/entry-variables.png);"></span>
                 </a>
                 <div class="content">
-                    <h4><a href="/portfolio/boselecta/pages/journal/figma-variables/" title="">Refining Figma design tokens &amp; variables for developer handoff</a></h4>
+                    <h4><a href="pages/journal/figma-variables/" title="Refining Figma design tokens">Refining Figma design tokens &amp; variables for developer handoff</a></h4>
                 </div>
             </div>
             <div class="col">
-                <a href="#" class="img-wrap">
+                <a href="pages/journal/design-inspection/" class="img-wrap">
                     <span class="img" style="background-image: url(assets/img/entry-inspection.png);"></span>
                 </a>
                 <div class="content">
-                    <h4><a href="/portfolio/boselecta/pages/journal/design-inspection/" title="">Syncing a Design inspection alongside UAT</a></h4>
+                    <h4><a href="pages/journal/design-inspection/" title="Design inspection alongside UAT">Syncing a Design inspection alongside UAT</a></h4>
                 </div>
             </div>
             <div class="col">
-                <a href="#" class="img-wrap">
+                <a href="pages/journal/user-flow/" class="img-wrap">
                     <span class="img" style="background-image: url(assets/img/entry-userflow.png);"></span>
                 </a>
                 <div class="content">
-                    <h4><a href="/portfolio/boselecta/pages/journal/user-flow/" title="">Automated Userflow and Screen repository for sprint project</a></h4>
+                    <h4><a href="pages/journal/user-flow/" title="Automated Userflow and Screen repository">Automated Userflow and Screen repository for sprint project</a></h4>
                 </div>
             </div>
         </div>
@@ -139,6 +131,17 @@ FOOTER
                 <h3><a href="#" title="">Every Adventure</a></h3>
                 <p>I previously worked as a Product designer for an events company.<br class="dt-set" /> Every Adventure was one brand I created from concept through many iterations.</p>
                 <p>This showcase is a retrospective redesign I did over a few evenings.<br /> Mobile first design and Information Architecture we the areas I explored.</p>
+            </div>
+        </div>
+    </section>
+    <section id="showcase" class="fade casestudy">
+        <div id="casestudy-flip" class="col">
+            <div class="img-wrap">
+                <img src="assets/img/showcase-flipjapan.png" alt="">
+            </div>
+            <div class="content">
+                <h3><a href="#" title="">Flip Japan</a></h3>
+                <p>Flip Japan is a personal project to explore Using AI during the initial design process in addition to aiding me learn Next JS with the intention of release it as a product.</p>
             </div>
         </div>
     </section>
