--- a/boselecta/pages/casestudy/research-improvement/index.html
+++ b/boselecta/pages/casestudy/research-improvement/index.html
@@ -19,22 +19,13 @@
 <link rel="stylesheet" href="../../../assets/css/core.css">
 <link rel="stylesheet" href="../../../assets/css/styles.css">
 <script src="../../../assets/js/core.js"></script>
-<!--
-HEADER
-1. HERO
-2. SERVICES
-3. BENEFITS
-4. DETAILS
-5. TESTIMONIALS
-FOOTER
--->
+
 </head>
 <body class="page-journal">
     <!-- HEADER  -->
     <header>
         <div class="brand">
-            <h1>Peter Roper</h1>
-            <small>Product Designer</small>
+            <h1>Peter Roper <span class="img" style="background-image: url(/assets/img/fox.png);"></span></h1>
         </div>
         <a href="/" class="close"><span class="material-icons">close</span></a>
     </header>
@@ -52,10 +43,14 @@ FOOTER
         <div class="container section1 flex">
             <div class="col1 col">
                 <h4>Outcome</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisi. Donec vel sapien at nunc suscipit tincidunt. Fusce auctor, ligula id tincidunt sollicitudin, justo velit convallis nisi, a fermentum nunc sapien at risus. Curabitur id ligula vel orci auctor malesuada. Integer a eros sed ipsum cursus convallis. Mauris nec velit et justo facilisis placerat. Suspendisse potenti. Ut in tincidunt augue, a posuere nisl.</p>
-                <blockquote>
-                    <p>"Design doesn't stop at handoff; it’s essential to see it through to implementation, ensuring the vision is realized in the final product."</p>
-                </blockquote>
+                <p>
+                    Through initial discovery work, I identified that improving decision-making clarity and simplifying user selections would lead to the most meaningful gains.<br />
+                    Follow-up usability testing showed a significant improvement in task completion time. We also uncovered missing functionality which, once addressed, contributed to higher user satisfaction with online claims.<br />
+                    Post-release, we observed measurable reductions in claims-related call and chat volumes, along with an increase in user retention.
+                </p>
+                <!--blockquote>
+                    <p></p>
+                </blockquote-->
             </div>
             <div class="col2 col">
                 <span class="img"></span>
@@ -65,73 +60,80 @@ FOOTER
             <div class="flex">
                 <div class="col">
                     <span class="material-icons">close</span>
-                    <i data-lucide="bullseye" style="vertical-align: middle; margin-right: 8px;"></i>
-                    <h3>Usability <br class="dt-set" />Score</h3>
-                    <p>A follow up usability score saw an approval rating of 7/9 reviewers.</p>
-                </div>
-                <div class="col">
-                    <span class="material-icons">close</span>
-                    <h3>Stakeholder <br class="dt-set" />Approval</h3>
-                    <p>The design teamed gained a strong role in future sprint phase requirement setting and strategy.</p>
-                </div>
-                <div class="col">
-                    <span class="material-icons">close</span>
-                    <h3>Improved<br class="dt-set" />Retention</h3>
+                    <h3>Improved<br class="dt-set" /> Retention</h3>
                     <p>Initial Data showed that mobile first designs saw a 10% increase in user retention past the first month.</p>
                 </div>
+                <div class="col">
+                    <span class="material-icons">close</span>
+                    <h3>Call Center <br class="dt-set" />Reduction</h3>
+                    <p>The volumne of calls relating to claim processing reduced by 20% within 3 months on implementation.</p>
+                </div>
+                <div class="col">
+                    <span class="material-icons">close</span>
+                    <i data-lucide="bullseye" style="vertical-align: middle; margin-right: 8px;"></i>
+                    <h3>Increased<br class="dt-set" /> User Satisfaction</h3>
+                    <p>A follow up usability score saw an approval rating of 7/9 reviewers.</p>
+                </div>  
             </div>
         </div>
+        <div class="heading container">
+            <span class="img" style="background-image: url(/assets/img/case-claim-outcome.png);"></span>
+        </div>
+
         <div class="container section1 flex">
             <div class="col1 col">
-                <h4>Context</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisi. Donec vel sapien at nunc suscipit tincidunt. Fusce auctor, ligula id tincidunt sollicitudin, justo velit convallis nisi, a fermentum nunc sapien at risus. Curabitur id ligula vel orci auctor malesuada. Integer a eros sed ipsum cursus convallis. Mauris nec velit et justo facilisis placerat. Suspendisse potenti. Ut in tincidunt augue, a posuere nisl.</p>
+                <h4>Background</h4>
+                <p>Asurion Home+ is a Device Protection and Insurance service with a customer facing marketting site and portal app for managing customer devices and claims. I acted as a lead designer for Sprints 1~3, before welcoming 2 designers onto the team in sprint 4. These initial phases were constrained by a need to deliver a full scale product whilst requirements evolved. The project was partially localised from an existing US led project which prioritized a web first design template.</p>
             </div>
             <div class="col2 col">
-                <h4>Background</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisi. Donec vel sapien at nunc suscipit tincidunt. Fusce auctor, ligula id tincidunt sollicitudin, justo velit convallis nisi, a fermentum nunc sapien at risus. Curabitur id ligula vel orci auctor malesuada. Integer a eros sed ipsum cursus convallis. Mauris nec velit et justo facilisis placerat. Suspendisse potenti. Ut in tincidunt augue, a posuere nisl.</p>
+                <h4>Context</h4>
+                <p>By sprint 5 we had successfully released a home device insurance service for multi clients. The UX team were now in a position to contribute proposals to improve the overall UX of the service. My area was focussed on the claims section of the users My Portal experience. We had undertaken 2 qualitative usability tests and a robust user led competitor research assignment which were compiled into specific tasks.</p>
             </div>
         </div> 
-        <div class="heading container">
-            <span class="img"></span>
-        </div>
         <div class="container section1 flex">
             <div class="col1 col">
-                <h4>Strategy</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisi. Donec vel sapien at nunc suscipit tincidunt. Fusce auctor, ligula id tincidunt sollicitudin, justo velit convallis nisi, a fermentum nunc sapien at risus. Curabitur id ligula vel orci auctor malesuada. Integer a eros sed ipsum cursus convallis. Mauris nec velit et justo facilisis placerat. Suspendisse potenti. Ut in tincidunt augue, a posuere nisl.</p>
                 <h5>Requirements</h5>
                 <ul>
                     <li>Reduce unnecessary items</li>
                     <li>Improve device issue input</li>
                     <li>Refine compensation methods</li>
+                    <li>Provide step by step guidance</li>
+                    <li>Give clear information relevant compensation selection.</li>
+                    <li>Add call and contact methods.</li>
                 </ul>
             </div>
             <div class="col2 col">
-                <span class="img"></span>
+                <span class="img" style="background-image: url(/assets/img/case-claim-xxx.png);"></span>
             </div>
         </div> 
         <div class="container section1 flex">
             <div class="col1 col">
-                <span class="img"></span>
+                <span class="img" style="background-image: url(/assets/img/case-claim-flow.png);"></span>
             </div>
             <div class="col2 col">
                 <h4>Structure</h4>
-                <p>I made a conscious decision to map the current and ideal flows. I sometimes skip ahead due to time restrictions but having come off the back of a different task breaking down due to unrefined requirements, I thought it best to outline early and get support for my idea at a basic level. </p>
-                <p>I’m confident in my ability to visualise internally but by focussing on this layer of detail I was satisfied that I had captured a refined and simplified flow which aided different user needs and pain points.</p>
+                <p>Careful consideration of the user flow led to improvements in how users interacted with the claim process. Decision points were simplified by:</p>
+                <ul>
+                    <li>Converting specific user choices into system-driven behaviors.</li>
+                    <li>Splitting complex decisions into separate, manageable flows.</li>
+                    <li>Applying clear hierarchy to options presented on-screen.</li>
+                </ul>
+                <p>These refinements reduced cognitive load and helped guide users more intuitively through tasks. Additionally, gaps in functionality were identified and addressed, ensuring the flow reduced post task confirmation points.</p>
             </div>
         </div>  
-        <div class="heading narrow container">
+        <div class="headline heading narrow container">
             <div class="flex">
                 <div class="col">
-                    <h3>Repair Users</h3>
-                    <p>Provide a quick end to end solution.</p>
+                    <h3>Repair as singular flow</h3>
+                    <p>Quick and direct flow for majority of users with additional scope for date, time entry</p>
                 </div>
                 <div class="col">
-                    <h3>Problem identification</h3>
-                    <p>Reduce number of potential steps and improved initial understanding.</p>
+                    <h3>Device Issue refinement</h3>
+                    <p>Increased selection options which allowed better system recognition and limited further questioning</p>
                 </div>
                 <div class="col">
-                    <h3>Compensation Methods</h3>
-                    <p>Simplify options and leverage stakeholder upsell goals.</p>
+                    <h3>Replace &amp; Upgrade prioritisation</h3>
+                    <p>Prioritised replacement and upgrade options with visual aids to engage the users decision process.</p>
                 </div>
             </div>
         </div> 
