--- a/boselecta/pages/journal/design-inspection/index.html
+++ b/boselecta/pages/journal/design-inspection/index.html
@@ -31,8 +31,7 @@ FOOTER
     <!-- HEADER  -->
     <header>
         <div class="brand">
-            <h1>Peter Roper</h1>
-            <small>Product Designer</small>
+            <h1>Peter Roper <span class="img" style="background-image: url(/assets/img/fox.png);"></span></h1>
         </div>
         <a href="/portfolio/boselecta/" class="close"><span class="material-icons">close</span></a>
     </header>
